Finished most of the styling, added a background color, fixed the behavior of the sidedrawer on mobile, changed the front and back end README files

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -4,4 +4,9 @@ html {
 
 body {
   height: 100%;
+  background: #fbeadb;
+}
+
+.card {
+  background: #fbeadb;
 }
